--- a/estilo.css
+++ b/estilo.css
@@ -12,7 +12,7 @@ html{
 /* SECCION INICIO */
 .inicio{
     background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)),
-    url("img/gaming.jpg");
+    url("img/programacion-de-videojuegos-978x652.jpg");
     background-size: cover;
     background-position: center center;
     color: #fff;
